# zk_rust

./: README.MD  README.md
algebra/algebralib/headers/algebraLib/: FieldElement.hpp
libstark/src/languages/Bair/: BairWitness.cpp  BairWitness.hpp
libstark/src/protocols/common/CryptoCommitment/: MerkleCommitment.hpp
rust_project/: Cargo.toml  build.rs
rust_project/src/: bair_witness_bridge.h  lib.rs  libstark_tests.rs
