[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.50"


[build-dependencies]
cxx = "1.0.50"
cxx-build = "1.0"

[target.'cfg(target_os = "linux")'.cxxbridge]
include_directories = ["libSTARK/algebra/FFT/src", "libSTARK/libstark/src", "libSTARK/libstark/src/common/langCommon"]

[package.metadata.cpp]
include_paths = ["libSTARK/algebra/FFT/src", "libSTARK/libstark/src", "libSTARK/libstark/src/common/langCommon"]